# GeekTech

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
geektech/: db.sqlite3  requirements.txt
geektech/geektech/: asgi.py  settings.py  urls.py  wsgi.py
geektech/shopapp/: admin.py  models.py  urls.py  views.py
geektech/shopapp/migrations/: 0001_initial.py  0002_promotions.py  0003_rename_promotions_promotion.py  0004_delivery.py  0005_contact.py
geektech/shopapp/static/css/: base.css  category.css  delivery.css  feedback.css  geektech.css  product-details.css
geektech/shopapp/templates/: base.html  cart.html  category.html  contacts.html  delivery.html  feedback.html  geektech.html  product-details.html  promotions.html  reviews.html
geektech/staticfiles/css/: category.css  feedback.css  geektech.css  product-details.css  profile.css  promotions.css  reviews.css
geektech/users/: urls.py  views.py
geektech/users/templates/: profile.html
geektech/users/templates/registration/: login.html  registration.html
staticfiles/css/: base.css  cart.css  contacts.css  geektech.css  log-reg.css  product-details.css  promotions.css
