[tool.poetry]
name = "geektech"
version = "0.1.0"
description = "GeekTech"
authors = ["mityashka <dima.kuzkin@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "23.0.0"
asgiref = "3.8.1"
django = "5.1.4"
packaging = "24.2"
pillow = "11.0.0"
product = "0.1.1.1"
slug = "2.0"
sqlparse = "0.5.3"
typing-extensions = "4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
